# pdf-splitter

./: .gitignore  Cargo.toml  DESIGN.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build-windows.yml
_legacy/cli/: Cargo.toml
src/: App.vue  main.rs  main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/pdf/: error.rs  mod.rs  splitter.rs
src/assets/styles/: main.css
src/components/: DropZone.vue  ErrorView.vue  FileCard.vue  ProgressView.vue  ResultView.vue
src/composables/: usePdfSplitter.ts
src/types/: index.ts
